Fixed vertical spacing

--- a/src/components/type-indicator/type-indicator.module.scss
+++ b/src/components/type-indicator/type-indicator.module.scss
@@ -8,6 +8,7 @@
     border: 1px solid black;
     text-shadow: 1px 1px 1px #000a;
     color: white;
+    line-height: 1em;
 }
 
 .normal {
